--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollup-plugin-postcss",
+  "name": "@therealsamf/rollup-plugin-postcss",
   "version": "2.0.3",
   "description": "Seamless integration between Rollup and PostCSS",
   "main": "dist/index.js",
@@ -15,21 +15,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/egoist/rollup-plugin-postcss.git"
+    "url": "git+https://github.com/therealsamf/rollup-plugin-postcss"
   },
   "keywords": [
     "postcss",
     "rollup"
   ],
-  "author": "EGOIST <0x142857@gmail.com>",
+  "author": {
+    "name": "Samuel Faulkner"
+  },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/egoist/rollup-plugin-postcss/issues"
+    "url": "https://github.com/therealsamf/rollup-plugin-postcss/issues"
   },
   "engines": {
     "node": ">=6"
   },
-  "homepage": "https://github.com/egoist/rollup-plugin-postcss#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "autoprefixer": "^7.2.4",
@@ -45,6 +46,9 @@
     "stylus": "^0.54.5",
     "sugarss": "^1.0.1",
     "xo": "^0.18.2"
+  },
+  "peerDependencies": {
+    "less": "^3.9.0"
   },
   "dependencies": {
     "chalk": "^2.4.2",
